1999-07-14  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* target.make: Patch for threads on Solaris by bgg@itga.com.au

1999-07-05  Adam Fedor  <fedor@gnu.org>

        * configure.in: Fix prefix check.
	
1999-06-28  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GNUstep.csh.in: Include Tools/host-cpu/host-os in path for any
	utilities that are installed without a startup script.
	* GNUstep.sh.in: ditto.

1999-06-24  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* common.make: include -Wall when building for debug

1999-06-16  Adam Fedor  <fedor@gnu.org>

	* executable.template.in: Add double quotes around $@ to quote
	arguments properly (Suggested by Roman Puttkammer
	<puttkamm.ny@fp.cibc.com>).

Fri Jun 11 17:23:59 1999  Adam Fedor  <fedor@ultra.doc.com>

	* executable.template.in: Fixes to work on Solaris

1999-06-03  Adam Fedor  <fedor@gnu.org>

	* ctool.make: New file for making C tools.
	* GNUmakefile.in: Install it.
	* whichlib.pl.in: Bug fixes.
	* GNUstep.csh.in: Fix up PATHPREFIX expansion 
	(patches and files from from Helge Hess <hh@mdlink.de>)

	* GNustep.sh.in: Insert GNUstep path before PATH.

1999-06-01  Adam Fedor  <fedor@gnu.org>

	* executable.template.in: New file to be used as shell script
	application/tool starter.
	* configure.in: Configure it.
	* GNUmakefile.in: Install it.
	* GNUstep.sh.in: Use simpler path and add GNUSTEP_PATHPREFIX_LIST
	* GNUstep.csh.in: Likewise.
	* openapp.in: Use GNUSTEP_PATHPREFIX_LIST and simpler path search
	* debugapp.in: Likewise.
	* application.make: Copy it to main app directory (using app name).
	* tool.make: Install it to main Tool directory when installing.

Fri May 28  6:10:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* application.make: Incorporate appnameInfo.plist into the Info.plist
	if it exists.

Wed May 19 10:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* rules.make: Add APPLICATION_ICON